# tap-test-data-generator

./: .gitignore  .travis.yml  MANIFEST.in  README.md  requirements.txt  sample_config.json  setup.cfg  setup.py
.github/workflows/: python-publish.yml
tap_test_data_generator/: __init__.py  data_generator.py  sample.json  string_generator.py  value_pairs_combinator.py
tap_test_data_generator/metadatas/: sample2.json
tap_test_data_generator/object-repositories/: dim-sample.json
tap_test_data_generator/schemas/: sample.json  sample2.json  sample3.json
tap_test_data_generator/schemas/definitions/: example.json
tap_test_data_generator/wrong_schemas/definitions/: not_a_json.txt
tests/: __init__.py  test_data_generator.py  test_discovery.py  test_generate_and_write_record.py  test_sync.py  value_pairs_combinator.py
