[metadata]
description-file = README.md

[aliases]
test = pytest

[tool:pytest]
python_files = tests/*.py
addopts = -v --junit-xml=dist/test-reports/unit/report.xml

[coverage:run]
include = tap_test_data_generator/*.py
omit = venv
branch = True

[coverage:html]
directory = dist/test-coverage/html

[coverage:xml]
output = dist/test-coverage/coverage.xml
