[metadata]
url = https://github.com/ericlebail/tap-test-data-generator
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[aliases]
test = pytest

[tool:pytest]
python_files = tests/*.py
addopts = -v

[coverage:run]
include = tap_test_data_generator/*.py
omit = venv
branch = True
